# shas

./: Dockerfile  README.md
.github/workflows/: browser.yml  server.yml
browser/: .gitignore  Cargo.toml  index.html
browser/assert/: manifest.json
browser/src/: connection.rs  lib.rs  main.rs
noise-ix/: Cargo.toml
noise-ix/src/: cipher_state.rs  handshake.rs  lib.rs  symmetric_state.rs
payload/: Cargo.toml
payload/src/: lib.rs
server/: Cargo.toml  sqlx-data.json
server/migrations/: 20210226025128_shas.sql
server/src/: connection_handle.rs  main.rs  peer_handle.rs  utils.rs  vars.rs
server/src/database/: account.rs  entity.rs  field.rs  mod.rs  subscription.rs
utils/: Cargo.toml
utils/src/: lib.rs
