[package]
name = "browser"
version = "0.0.0"
authors = ["Dung Ph <dungph@zoho.com>"]
edition = "2018"

[build]
target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "0.8.0"
web-sys = "0.3"
serde_json = "1.0.61"
once_cell = "1.7.0"
wee_alloc = "0.4.5"
float-ord = "0.2.0"
chrono = { version = "0.4.19", features = ["wasmbind"] }
snow = "0.8.0"
serde_cbor = "0.11.1"
utils = { path = "../utils" }
minicbor = { version = "0.11.3", features = ["half"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.21"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

