[package]
name = "browser"
version = "0.0.0"
authors = ["Dung Ph <dungph@zoho.com>"]
edition = "2018"

[dependencies]
seed = "0.8.0"
web-sys = "0.3"
serde_json = "1.0.61"
once_cell = "1.7.0"
wee_alloc = "0.4.5"
float-ord = "0.2.0"
chrono = { version = "0.4.19", features = ["wasmbind"] }
utils = { path = "../utils" }
noise-ix = { path = "../noise-ix" }
minicbor = { version = "0.11.3", features = ["half"] }
rand = "0.8.4"
serde = "1.0.130"

[dev-dependencies]
wasm-bindgen-test = "0.3.21"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

