[package]
name = "noise-ix"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = "0.4.3"
blake2 = { version = "0.9.2", default-features = false }
chacha20poly1305 = { version = "0.9.0", default-features = false}
digest = { version = "0.9.0"}
hkdf = "0.11.0"
hmac = "0.11.0"
x25519-dalek = { version = "1.2.0", features = ["u64_backend"], default-features = false }

[dev-dependencies]
snow = "0.8.0"
