[package]
name = "payload"
version = "0.1.0"
authors = ["dungph <dungph@zoho.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_cbor = "0.11.1"

[features]
default = ["login", "relay"]
login = []
relay = []
