[package]
name = "shas"
version = "0.0.0"
authors = ["Dung Ph <dungph@zoho.com>"]
edition = "2018"
license = "MIT"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.9.0", features = ["attributes"] }
tide-websockets = "0.3"
anyhow = "1.0.37"
serde = "1.0.118"
serde_derive = "1.0.118"
async-trait = "0.1.42"
once_cell = "1.5.2"
serde_json = "1.0.61"
sha2 = "0.9.3"
payload = { path = "../payload/" }
sqlx = {version="0.5.1", features=["postgres", "runtime-async-std-rustls", "json", "chrono", "offline"]}
rust-argon2 = "0.8.3"
rand = "0.7"
base64 = "0.13.0"
chrono = "0.4.19"
snow = "0.8.0"
futures = "0.3.15"
serde_cbor = "0.11.1"
x25519-dalek = "1.1.1"
